--- a/css/style.css
+++ b/css/style.css
@@ -370,7 +370,8 @@ input[type="text"] {
 aside{
   background-color: var(--dark-grey);  
   padding: 1rem;
-  width: 50%; 
+  width: 50%;
+  color: white; 
 }
 
 .title-aside{
@@ -428,25 +429,12 @@ article {
 .badge {
   position: absolute; 
   padding: 10px; 
-  background-color: var(--primary-color);
+  background-color: #D6552b;
   color: white; 
   text-align: center; 
   font-weight: bold; 
   z-index: 1; 
   border-radius: 5px;
-}
-
-footer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: var(--primary-color); 
-  min-height: 50px;
-  /*position: fixed;
-  bottom: 0;
-  left: 0;*/
-  width: 100%;
-  color: var(--white);
 }
 
 @media (max-width: 1100px) {
@@ -576,6 +564,7 @@ footer {
 .imagenes-propiedad img {
   width: 100%;
   border-radius: 5px;
+  height: 150px;
 }
 
 .property-info-single {
@@ -652,7 +641,7 @@ footer {
 }
 
 .main-image {
-  
+  border-radius: 5px;
   height: 300px;
   margin-bottom: 20px;
   background: #e0e0e0;
@@ -701,6 +690,7 @@ footer {
 .thumbnail img {
   max-width: 50%;
   max-height: 50%;
+  border-radius: 5px;
 }
 
 .arrow {
@@ -740,7 +730,7 @@ footer {
 }
 .btn-send {
   padding: 10px; 
-  background-color: var(--primary-color);
+  background-color: #D6552b;
   color: white; 
   text-align: center; 
   font-weight: bold; 
@@ -768,4 +758,119 @@ footer {
   padding: 10px 0px 20px 0px;
   color: var(--primary-color);
   align-self: center;
+}
+.grilla-emprende {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: center;
+  padding-top: 20px;
+  padding-bottom: 40px;
+}
+.card {
+  flex: 1;
+  min-width: 250px;
+  max-width: 300px;
+  background-color: white;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  overflow: hidden;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  text-align: center;
+}
+.card img {
+  width: 100%;
+  height: 300px;
+}
+.card-content {
+  padding: 15px;
+}
+.card-content h3 {
+  font-size: 1.2em;
+  margin-bottom: 10px;
+}
+.card-content p {
+  font-size: 0.9em;
+  color: #666;
+  margin-bottom: 20px;
+}
+.card-content a {
+  text-decoration: none;
+  background-color: #D6552b;
+  color: white;
+  padding: 10px 15px;
+  border-radius: 5px;
+  font-weight: 500;
+}
+
+footer {
+  background-color: #000;
+  color: #fff;
+  padding: 20px;
+}
+
+
+.footer-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.contact-info {
+  flex: 1;
+  margin: 10px;
+}
+
+.legal-info {
+  display: flex;
+  flex: 1;
+  margin: 10px;
+  flex-direction: column;
+  align-items: end;
+}
+
+.logo-social {
+  text-align: center;
+  margin: 10px;
+}
+
+.logo-f {
+  max-width: 250px;
+  display: block;
+  margin: 0 auto 10px;
+}
+
+.social-media a {
+  color: #fff;
+  margin: 0 5px;
+  font-size: 20px;
+  text-decoration: none;
+}
+
+.footer-bottom {
+  background-color: #2DA7BB;
+  text-align: center;
+  padding: 10px;
+  margin-top: 20px;
+  color: #000;
+  border-radius: 5px;
+  font-weight: 700;
+}
+
+.footer-bottom p {
+  margin: 0;
+}
+
+.footer a {
+  color: #fff;
+  text-decoration: none;
+}
+
+.footer a:hover {
+  text-decoration: underline;
+}
+
+.footer p {
+  margin: 5px 0;
 }
